force-app/main/default/objects/Program_Participation__c/Program_Participation__c.object-meta.xml
<CustomObject>
    <label>תוכנית</label>
    <nameField>
        <label>שם המשתתף בתכנית</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>תוכניות</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>