force-app/main/default/objects/Program_Participation__c/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>