force-app/main/default/objects/Program_Participation__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ParticipationStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Forces</fullName>
            </value>
            <value>
                <fullName>Not Eligible - Technically</fullName>
            </value>
            <value>
                <fullName>Not Included in Second/Third Round</fullName>
            </value>
            <value>
                <fullName>Not Eligible - Content</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Eligible - Family Circle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>