force-app/main/default/objects/Program_Participation__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>א</fullName>
            </value>
            <value>
                <fullName>ב</fullName>
            </value>
            <value>
                <fullName>ג</fullName>
            </value>
            <value>
                <fullName>ד</fullName>
            </value>
            <value>
                <fullName>ה</fullName>
            </value>
            <value>
                <fullName>ו</fullName>
            </value>
            <value>
                <fullName>ז</fullName>
            </value>
            <value>
                <fullName>ח</fullName>
            </value>
            <value>
                <fullName>ט</fullName>
            </value>
            <value>
                <fullName>י</fullName>
            </value>
            <value>
                <fullName>יא</fullName>
            </value>
            <value>
                <fullName>יב</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>