force-app/main/default/objects/Program_Participation__c/fields/ConfirmationFamilyIsPartOfVOT__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationFamilyIsPartOfVOT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Family Is Part Of VOT</label>
    <type>Checkbox</type>
</CustomField>