force-app/main/default/objects/Program_Participation__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>Fees__c</referenceTo>
    <relationshipName>Program_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>