force-app/main/default/objects/Program_Participation__c/fields/FoodRestriction__c.field-meta.xml
<CustomField>
    <fullName>FoodRestriction__c</fullName>
    <label>Food restriction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nut/Peanut Free</fullName>
            </value>
            <value>
                <fullName>Gluten Free</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>