force-app/main/default/objects/Program_Participation__c/fields/FoodRestrictionOther__c.field-meta.xml
<CustomField>
    <fullName>FoodRestrictionOther__c</fullName>
    <label>Food restriction Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>