force-app/main/default/objects/Program_Participation__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <formula>Participant__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing City</label>
    <type>Text</type>
</CustomField>