force-app/main/default/objects/Program_Participation__c/fields/Mercchav_can_not_register_to_anther_prog__c.field-meta.xml
<CustomField>
    <fullName>Mercchav_can_not_register_to_anther_prog__c</fullName>
    <formula>or(
ispickval( ParticipationStatus__c ,&apos;Registered&apos;),
ispickval( ParticipationStatus__c ,&apos;Finished&apos;),
ispickval( ParticipationStatus__c ,&apos;Arrived&apos;),
and(ispickval( ParticipationStatus__c ,&apos;Cancelled&apos;),ispickval( Cancellation_Reason__c ,&apos;Security Forces&apos;)),
and(ispickval( ParticipationStatus__c ,&apos;Cancelled&apos;),ispickval( Cancellation_Reason__c ,&apos;Not Included in Second/Third Round&apos;)),
and(ispickval( ParticipationStatus__c ,&apos;Cancelled&apos;),ispickval( Cancellation_Reason__c ,&apos;Not Eligible - Family Circle&apos;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mercchav can not register to anther prog</label>
    <type>Checkbox</type>
</CustomField>