force-app/main/default/objects/Program_Participation__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Program_Participations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>