force-app/main/default/objects/Program_Participation__c/fields/Participant_Gender__c.field-meta.xml
<CustomField>
    <fullName>Participant_Gender__c</fullName>
    <formula>TEXT( Participant__r.Gender__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Gender</label>
    <type>Text</type>
</CustomField>