force-app/main/default/objects/Program_Participation__c/fields/Participant_Israeli_ID_number__c.field-meta.xml
<CustomField>
    <fullName>Participant_Israeli_ID_number__c</fullName>
    <formula>Participant__r.Israeli_ID_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Israeli ID number</label>
    <type>Text</type>
</CustomField>