force-app/main/default/objects/Program_Participation__c/fields/Participant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Participant_Mobile__c</fullName>
    <formula>Participant__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Mobile</label>
    <type>Text</type>
</CustomField>