force-app/main/default/objects/Program_Participation__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <formula>Participant__r.Full_Name_and_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>