force-app/main/default/objects/Program_Participation__c/fields/ParticipationStatus__c.field-meta.xml
<CustomField>
    <fullName>ParticipationStatus__c</fullName>
    <label>Participation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
                <default>true</default>
                <label>Interested</label>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Arrived</fullName>
            </value>
            <value>
                <fullName>Not Show up</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>