force-app/main/default/objects/Program_Participation__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Program_ParticipationsPayer</relationshipName>
    <type>Lookup</type>
</CustomField>