force-app/main/default/objects/Program_Participation__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <label>Picture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>