force-app/main/default/objects/Program_Participation__c/fields/PictureLimitationInTime__c.field-meta.xml
<CustomField>
    <fullName>PictureLimitationInTime__c</fullName>
    <label>Picture Limitation in Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>