force-app/main/default/objects/Program_Participation__c/fields/Program_Audience__c.field-meta.xml
<CustomField>
    <fullName>Program_Audience__c</fullName>
    <formula>TEXT(Program__r.Target_Audiance__c)</formula>
    <label>Program Audience</label>
    <type>Text</type>
</CustomField>