force-app/main/default/objects/Program_Participation__c/fields/Program_group__c.field-meta.xml
<CustomField>
    <fullName>Program_group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program_group__c.Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_group__c</referenceTo>
    <relationshipName>Program_group_Program_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>