force-app/main/default/objects/Program_Participation__c/fields/ReadAcceptConditions__c.field-meta.xml
<CustomField>
    <fullName>ReadAcceptConditions__c</fullName>
    <label>Read &amp; Accept Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>