force-app/main/default/objects/Program_Participation__c/fields/Relation_to_VOT__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_VOT__c</fullName>
    <label>Relation to VOT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brother/Sister in Law</fullName>
            </value>
            <value>
                <fullName>cousin</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>nephew</fullName>
            </value>
            <value>
                <fullName>Uncle/Aunt</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Publicly known</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Parent in law</fullName>
            </value>
            <value>
                <fullName>Spouse without a ring</fullName>
            </value>
            <value>
                <fullName>Bride/Groom</fullName>
            </value>
            <value>
                <fullName>First circle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>