force-app/main/default/objects/Program_Participation__c/fields/Retirement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Reason__c</fullName>
    <label>Retirement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ParticipationStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Difficulty in arriving</fullName>
            </value>
            <value>
                <fullName>Incompatibility with activity</fullName>
            </value>
            <value>
                <fullName>Unplanned event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>