force-app/main/default/objects/Program_Participation__c/fields/TriggerUpdateFinished__c.field-meta.xml
<CustomField>
    <fullName>TriggerUpdateFinished__c</fullName>
    <formula>and(
 Program_group__r.End_date__c =today(),
ispickval( ParticipationStatus__c ,&apos;Arrived&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TriggerUpdateFinished</label>
    <type>Checkbox</type>
</CustomField>