force-app/main/default/objects/Program_Participation__c/fields/VOT_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>VOT_Full_Name__c</fullName>
    <label>VOT Full Name</label>
    <type>TextArea</type>
</CustomField>