force-app/main/default/objects/Program_Participation__c/validationRules/Cancelation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelation_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(ParticipationStatus__c, &quot;Cancelled&quot;), ISPICKVAL(Cancellation_Reason__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>יש למלא סיבת ביטול</errorMessage>
</ValidationRule>