force-app/main/default/objects/Program_Participation__c/validationRules/Canceled_is_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Canceled_is_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(ParticipationStatus__c , &apos;Cancelled&apos;), 
ISPICKVAL( Cancellation_Reason__c , &apos;Other&apos;), 
ISBLANK(Other_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>הערך הנבחר בשדה ״סיבת ביטול ״ הוא ״אחר״ - עלייך למלא סיבה אחרת</errorMessage>
</ValidationRule>