force-app/main/default/objects/Program_Participation__c/validationRules/Retirement_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Retirement_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(ParticipationStatus__c, &quot;Not Show up&quot;), ISPICKVAL(Retirement_Reason__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Retirement_Reason__c</errorDisplayField>
    <errorMessage>יש למלא סיבת פרישה</errorMessage>
</ValidationRule>