force-app/main/default/objects/Program_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fee__c</columns>
    <columns>FoodRestriction__c</columns>
    <columns>FoodRestrictionOther__c</columns>
    <columns>Participant__c</columns>
    <columns>ParticipationStatus__c</columns>
    <columns>Payer__c</columns>
    <columns>Picture__c</columns>
    <columns>PictureLimitationInTime__c</columns>
    <columns>ReadAcceptConditions__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>